--- a/pom.xml
+++ b/pom.xml
@@ -2,37 +2,15 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.poc.project.tinyurl</groupId>
-  <artifactId>tinyurl</artifactId>
+  <groupId>com.poc</groupId>
+  <artifactId>com.poc.project</artifactId>
+  <packaging>pom</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>tinyurl</name>
-
-	<dependencies>
-		 <dependency>
-      		<groupId>junit</groupId>
-      		<artifactId>junit</artifactId>
-      		<scope>test</scope>
-      		<version>3.8.1</version>
-    	</dependency>
-    	<dependency>
-    			<groupId>org.springframework.boot</groupId>
-			    <artifactId>spring-boot-starter-parent</artifactId>
-			    <version>2.0.5.RELEASE</version>
-			    <type>pom</type>
-		</dependency>
-    	<dependency>
-    			<groupId>org.springframework.boot</groupId>
-			    <artifactId>spring-boot-starter-web</artifactId>
-			    <version>2.0.5.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<version>2.0.5.RELEASE</version>
-		</dependency>
-    </dependencies>
-    
-    <build>
+  <name>project</name>
+  <modules>
+    <module>tinyurl</module>
+  </modules>  
+ <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
