--- a/tinyurl/pom.xml
+++ b/tinyurl/pom.xml
@@ -1,52 +1,34 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <groupId>com.poc.project.tinyurl</groupId>
-  <artifactId>tinyurl</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>tinyurl</name>
-
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.project.poc</groupId>
+	<artifactId>project-tinyurl</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>tinyurl</name>
+	<description>Spring Boot Demo Project</description>
+	<parent>
+	   <groupId>org.springframework.boot</groupId>
+	   <artifactId>spring-boot-starter-parent</artifactId>
+	   <version>1.5.2.RELEASE</version>
+	</parent>
+	<properties>
+	   <java.version>1.8</java.version>
+	</properties>
 	<dependencies>
-		 <dependency>
-      		<groupId>junit</groupId>
-      		<artifactId>junit</artifactId>
-      		<scope>test</scope>
-      		<version>3.8.1</version>
-    	</dependency>
-    	<dependency>
-    			<groupId>org.springframework.boot</groupId>
-			    <artifactId>spring-boot-starter-parent</artifactId>
-			    <version>2.0.5.RELEASE</version>
-			    <type>pom</type>
-		</dependency>
-    	<dependency>
-    			<groupId>org.springframework.boot</groupId>
-			    <artifactId>spring-boot-starter-web</artifactId>
-			    <version>2.0.5.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<version>2.0.5.RELEASE</version>
-		</dependency>
-    </dependencies>
-    
-    <build>
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-web</artifactId>
+	    </dependency>
+	</dependencies> 
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.6.1</version>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
-        </plugin>
 		</plugins>
 	</build>
-</project>
+</project> 
