--- a/tinyurl/pom.xml
+++ b/tinyurl/pom.xml
@@ -29,6 +29,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+        		<groupId>com.heroku.sdk</groupId>
+        		<artifactId>heroku-maven-plugin</artifactId>
+        		<version>2.0.6</version>
+        		<configuration>
+  					<processTypes>
+     					<jar>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</jar>
+  					</processTypes>
+				</configuration>
+      		</plugin>
 		</plugins>
 	</build>
 </project> 
