--- a/tinyurl/pom.xml
+++ b/tinyurl/pom.xml
@@ -34,8 +34,14 @@
         		<artifactId>heroku-maven-plugin</artifactId>
         		<version>2.0.6</version>
         		<configuration>
+        			<appName>YOUR APP NAME COMES HERE</appName>
+        			<includeTarget>false</includeTarget>
+          			<includes>
+              				<include>${basedir}/${full-artifact-name}</include>
+          			</includes>
+        			<jdkVersion>1.8</jdkVersion>
   					<processTypes>
-     					<jar>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</jar>
+     					<web>java $JAVA_OPTS -jar ${full-artifact-name}</web>
   					</processTypes>
 				</configuration>
       		</plugin>
