--- a/tinyurl/pom.xml
+++ b/tinyurl/pom.xml
@@ -34,7 +34,7 @@
         		<artifactId>heroku-maven-plugin</artifactId>
         		<version>2.0.6</version>
         		<configuration>
-        			<appName>YOUR APP NAME COMES HERE</appName>
+        			<appName>tinyurl</appName>
         			<includeTarget>false</includeTarget>
           			<includes>
               				<include>${basedir}/${full-artifact-name}</include>
