--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,2 @@
 language: java
-script: mvn clean heroku:deploy -Dheroku.appName=tinyurl -DHEROKU_API_KEY="e586a349-f7f7-4efb-a85b-36243ecdd82e"
-deploy:
-  provider: heroku
-  api_key:
-    secure: "e586a349-f7f7-4efb-a85b-36243ecdd82e"
+script: -DHEROKU_API_KEY="e586a349-f7f7-4efb-a85b-36243ecdd82e" mvn clean heroku:verify -Dheroku.appName=tinyurl -Pheroku
