--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: java
-script: HEROKU_API_KEY=e586a349-f7f7-4efb-a85b-36243ecdd82e mvn clean heroku:verify -Dheroku.appName=tinyurl -Pheroku
+script: HEROKU_API_KEY=e586a349-f7f7-4efb-a85b-36243ecdd82e mvn clean heroku:deploy -Dheroku.appName=tinyurl -Pheroku
