--- a/tinyurl/pom.xml
+++ b/tinyurl/pom.xml
@@ -34,7 +34,7 @@
         		<artifactId>heroku-maven-plugin</artifactId>
         		<version>2.0.6</version>
         		<configuration>
-        			<appName>tinyurl</appName>
+        			<appName>project-application</appName>
         			<includeTarget>false</includeTarget>
           			<includes>
               				<include>./target/project-tinyurl-0.0.1-SNAPSHOT.jar</include>
