--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 		<junit.version>3.8.1</junit.version>
 		<spring.boot.version>1.5.2.RELEASE</spring.boot.version>
 		<java.version>1.8</java.version>
+		<maven.compiler.version>3.6.1</maven.compiler.version>
+		<heroku.maven.version>2.0.6</heroku.maven.version>
   </properties>
   
   <modules>
