--- a/tinyurl/pom.xml
+++ b/tinyurl/pom.xml
@@ -31,20 +31,29 @@
 	<build>
 		<plugins>
 			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
         		<groupId>com.heroku.sdk</groupId>
         		<artifactId>heroku-maven-plugin</artifactId>
-        		<version>2.0.6</version>
+        		<version>${heroku.maven.version}</version>
         		<configuration>
         			<appName>project-application</appName>
         			<includeTarget>false</includeTarget>
           			<includes>
               				<include>./target/project-tinyurl-0.0.1-SNAPSHOT.jar</include>
           			</includes>
-        			<jdkVersion>1.8</jdkVersion>
+        			<jdkVersion>${java.version}</jdkVersion>
   					<processTypes>
      					<web>java $JAVA_OPTS -jar ./target/project-tinyurl-0.0.1-SNAPSHOT.jar</web>
   					</processTypes>
