--- a/tinyurl/pom.xml
+++ b/tinyurl/pom.xml
@@ -27,6 +27,11 @@
 		    <artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring.boot.version}</version>
 	    </dependency>
+	    <dependency>
+	    	<groupId>com.heroku.sdk</groupId>
+        	<artifactId>heroku-maven-plugin</artifactId>
+        	<version>${heroku.maven.version}</version>
+	    </dependency>
 	</dependencies> 
 	<build>
 		<plugins>
