--- a/tinyurl/pom.xml
+++ b/tinyurl/pom.xml
@@ -35,7 +35,7 @@
 	</dependencies> 
 	<build>
 		<plugins>
-			<plugin>
+			<!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
@@ -43,7 +43,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
-            </plugin>
+            </plugin-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -59,6 +59,8 @@
           			<includes>
               				<include>./target/project-tinyurl-0.0.1-SNAPSHOT.jar</include>
           			</includes>
+          			<source>${java.version}</source>
+                    <target>${java.version}</target>
         			<jdkVersion>${java.version}</jdkVersion>
   					<processTypes>
      					<web>java $JAVA_OPTS -jar ./target/project-tinyurl-0.0.1-SNAPSHOT.jar</web>
