--- a/tinyurl/pom.xml
+++ b/tinyurl/pom.xml
@@ -35,7 +35,7 @@
 	</dependencies> 
 	<build>
 		<plugins>
-			<!--plugin>
+			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
@@ -43,7 +43,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
-            </plugin-->
+            </plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
