--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
   <packaging>pom</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>project</name>
-  
+  <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.2.RELEASE</version>
+  </parent>
   <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>3.8.1</junit.version>
